# grackle

./: .coveragerc  .env  .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
app/api/: database.py  domain.py  models.py
app/api/appointment/: database.py  models.py
app/api/availability/: database.py  models.py
app/api/client/: database.py  models.py
app/api/service/: database.py  models.py
app/api/user/: database.py  models.py
app/core/: config.py  db.py
backend/: pyproject.toml
backend/app/: backend_pre_start.py  deps.py  main.py  models.py  schemas.py  utils.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 44c5df6390bf_add_integer_flags.py  72d406a348e8_.py  7d9f49e05b2c_.py  96f6e7223e77_initial_model_create.py  973f018adbcf_.py  9c1ee1caaeaf_.py  e32fabb9f55c_add_remaining_database_models.py  e44782dd499a_.py  e53cc0e5c794_.py
backend/app/api/: database.py  deps.py  domain.py  main.py  models.py  schemas.py
backend/app/api/domain/: appointment_iterator.py  availability.py  period.py  user.py
backend/app/api/repositories/: appointment.py  client.py  db_service.py  postgres.py  user.py
backend/app/api/routes/: appointment.py  client.py  health_check.py  login.py  service.py  user.py  users.py
backend/app/appointments/: domain.py  models.py  routes.py
backend/app/booking/: routes.py
backend/app/booking/templates/: book-now.html  contact-me.html  date-picker.html  index.html
backend/app/clients/: domain.py  models.py  routes.py
backend/app/core/: config.py  db.py
backend/app/domain/: appointment_iterator.py  availability.py
backend/app/gallery/: models.py
backend/app/login/: models.py  routes.py
backend/app/repositories/: base.py  postgres.py
backend/app/services/: domain.py  models.py  routes.py
backend/app/users/: domain.py  models.py  routes.py
backend/tests/: calls.json  conftest.py
backend/tests/api/routes/: test_appointments.py  test_client.py  test_items.py  test_services.py  test_users.py
backend/tests/domain/: __init__.py  test_availability.py  test_service.py
backend/tests/repositories/: test_postgres.py  test_user.py
backend/tests/unit/domain/: test_availability.py
backend/tests/utils/: appointment.py  client.py  item.py  service.py  user.py  utils.py
booking-htmx/: Dockerfile  main.py  pyproject.toml
booking-htmx/app/: initial_data.py
booking-htmx/app/alembic/: env.py
booking-htmx/app/api/: database.py  deps.py  main.py  models.py  schemas.py
booking-htmx/app/api/routes/: health_check.py  login.py  users.py
booking-htmx/app/auth/: routes.py
booking-htmx/app/core/: config.py  db.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: routeTree.gen.ts  theme.tsx
frontend/src/client/: models.ts  schemas.ts  services.ts
frontend/src/components/Appointments/: models.ts  (+3 more)
frontend/src/routes/: _public.tsx  booking.$shopName.tsx  booking.$username.tsx  booking.tsx  landing.tsx  login.tsx
scripts/: updateopenapi.sh
tests/: calls.json
tests/unit/domain/: test_service.py
(+66 files in other folders)
